# modal-mcp

./: Dockerfile  README.md  pyproject.toml
src/modal_mcp/: server.py
