[project]
name = "modal-mcp-server"
version = "0.1.0"
description = "MCP server for deploying and managing Modal applications, volumes, and sandboxes — designed for Claude Code"
readme = "README.md"
license = "MIT"
requires-python = ">=3.11"
dependencies = [
    "mcp[cli]>=1.2.0",
    "modal>=1.0.0",
]

[project.scripts]
modal-mcp-server = "modal_mcp.server:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[tool.hatch.build.targets.wheel]
packages = ["src/modal_mcp"]
